RESULTS/AutoSpec/raw_results/out-4o-oopsla/045_0015/045_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/045_0015/045_merged.c:72:3: error: unterminated comment
   72 |   /*@;
      |   ^
